[gd_scene load_steps=36 format=3 uid="uid://yuve2u02s7k6"]

[ext_resource type="Script" path="res://indev/Caveman Age Map Stuff/caveman_scene.gd" id="1_1pnt5"]
[ext_resource type="Script" path="res://indev/Caveman Age Map Stuff/camera_3d.gd" id="2_8hfka"]
[ext_resource type="Texture2D" uid="uid://b0w4ffyh86e3g" path="res://indev/Caveman Age Map Stuff/texture_07.png" id="3_dpyxj"]
[ext_resource type="Script" path="res://Scripts/Classes/PathManager.gd" id="4_c060r"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="5_wc6oj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vclh2"]
sky_top_color = Color(0, 0.397557, 0.629019, 1)
sky_horizon_color = Color(0.320473, 0.923326, 1, 1)
sky_energy_multiplier = 2.0

[sub_resource type="Sky" id="Sky_up5e2"]
sky_material = SubResource("ProceduralSkyMaterial_vclh2")

[sub_resource type="Environment" id="Environment_87b2l"]
background_mode = 2
sky = SubResource("Sky_up5e2")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
glow_enabled = true
glow_intensity = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j8s7k"]
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_xe5mq"]
size = Vector3(60, 2, 120)

[sub_resource type="BoxShape3D" id="BoxShape3D_cgeln"]
size = Vector3(60, 2, 120)

[sub_resource type="BoxShape3D" id="BoxShape3D_hdowp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_matxd"]
albedo_color = Color(1, 0.3746, 0.367139, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_la38d"]
material = SubResource("StandardMaterial3D_matxd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yje6h"]
albedo_color = Color(0, 1, 0.607843, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_m2k6e"]
material = SubResource("StandardMaterial3D_yje6h")

[sub_resource type="BoxShape3D" id="BoxShape3D_rrv4q"]
size = Vector3(1, 0.5, 31)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gk188"]
albedo_color = Color(1, 0.807916, 0.358328, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_t6d8v"]
material = SubResource("StandardMaterial3D_gk188")
size = Vector3(1, 0.5, 31)

[sub_resource type="BoxShape3D" id="BoxShape3D_yfck7"]
size = Vector3(21, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vegb0"]
albedo_color = Color(1, 0.807843, 0.356863, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_lqw7e"]
material = SubResource("StandardMaterial3D_vegb0")
size = Vector3(21, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_x78t8"]
size = Vector3(1, 0.5, 35.499)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xn38e"]
albedo_color = Color(1, 0.807843, 0.356863, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_lu7li"]
material = SubResource("StandardMaterial3D_xn38e")
size = Vector3(1, 0.5, 35.499)

[sub_resource type="BoxShape3D" id="BoxShape3D_y4ftn"]
size = Vector3(20, 0.414063, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1euk3"]
albedo_color = Color(1, 0.807843, 0.356863, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_lfqcy"]
material = SubResource("StandardMaterial3D_1euk3")
size = Vector3(20, 0.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dpjka"]
size = Vector3(1.11148, 0.35434, 53.0883)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5hsv3"]
albedo_color = Color(1, 0.807843, 0.356863, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_25bo8"]
material = SubResource("StandardMaterial3D_5hsv3")
size = Vector3(1, 0.5, 53)

[sub_resource type="BoxShape3D" id="BoxShape3D_rdui8"]
size = Vector3(1, 0.5, 35.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_squyb"]
albedo_color = Color(1, 0.807843, 0.356863, 1)
albedo_texture = ExtResource("3_dpyxj")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_cjnxb"]
material = SubResource("StandardMaterial3D_squyb")
size = Vector3(1, 0.5, 35.5)

[sub_resource type="Curve3D" id="Curve3D_swcr6"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 19.9924, 0, -47.9903, 0, 0, 0, 0, 0, 0, 19.984, 0, -16.9908, 0, 0, 0, 0, 0, 0, -0.99251, 0, -17.0148, 0, 0, 0, 0, 0, 0, -1.01211, 0, -52.497, 0, 0, 0, 0, 0, 0, -20.9884, 0, -52.4907, 0, 0, 0, 0, 0, 0, -20.9865, 0, 52.5024, 0, 0, 0, 0, 0, 0, -0.982655, 0, 52.4981, 0, 0, 0, 0, 0, 0, -0.98669, 0, 17.0004, 0, 0, 0, 0, 0, 0, 20.0009, 0, 16.9999, 0, 0, 0, 0, 0, 0, 20.0018, 0, 47.9858),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 10

[node name="Caveman Map" type="Node3D"]
script = ExtResource("1_1pnt5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_87b2l")

[node name="Ground_Terrain" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground_Terrain"]
material_override = SubResource("StandardMaterial3D_j8s7k")
mesh = SubResource("BoxMesh_xe5mq")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground_Terrain"]
shape = SubResource("BoxShape3D_cgeln")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.902473, 0.430747, 0, -0.430747, 0.902473, -7.00035, 22.1833, 50.2206)
shadow_enabled = true

[node name="Enemy Base Location" type="StaticBody3D" parent="."]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 19.889, 3.528, -52.486)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy Base Location"]
shape = SubResource("BoxShape3D_hdowp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemy Base Location"]
mesh = SubResource("BoxMesh_la38d")

[node name="Player Base Location" type="StaticBody3D" parent="."]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 19.8895, 3.52786, 52.4859)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player Base Location"]
shape = SubResource("BoxShape3D_hdowp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player Base Location"]
mesh = SubResource("BoxMesh_m2k6e")

[node name="Path Left" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 33)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path Left"]
shape = SubResource("BoxShape3D_rrv4q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Left/CollisionShape3D"]
mesh = SubResource("BoxMesh_t6d8v")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Path Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.005, 0, -16)
shape = SubResource("BoxShape3D_yfck7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Left/CollisionShape3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00180244, 0, 0)
mesh = SubResource("BoxMesh_lqw7e")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Path Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.992, 0, 1.25)
shape = SubResource("BoxShape3D_x78t8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Left/CollisionShape3D3"]
mesh = SubResource("BoxMesh_lu7li")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Path Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.4924, 0, 19.4992)
shape = SubResource("BoxShape3D_y4ftn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Left/CollisionShape3D4"]
mesh = SubResource("BoxMesh_lfqcy")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Path Left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40.963, -0.021, -6.492)
shape = SubResource("BoxShape3D_dpjka")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Left/CollisionShape3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0271282, 0.0212278, -0.00834656)
mesh = SubResource("BoxMesh_25bo8")

[node name="Path Right" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 20, 0.042, -33)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.007, 0.042, 0)
shape = SubResource("BoxShape3D_rrv4q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Right/CollisionShape3D"]
mesh = SubResource("BoxMesh_t6d8v")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Path Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.005, 0.042, -16)
shape = SubResource("BoxShape3D_yfck7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Right/CollisionShape3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00180244, 0, 0)
mesh = SubResource("BoxMesh_lqw7e")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Path Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.992, 0.042, 1.252)
shape = SubResource("BoxShape3D_rdui8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Right/CollisionShape3D3"]
mesh = SubResource("BoxMesh_cjnxb")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Path Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.492, 0.042, 19.499)
shape = SubResource("BoxShape3D_y4ftn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Right/CollisionShape3D4"]
mesh = SubResource("BoxMesh_lfqcy")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Path Right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40.963, 0.021, -6.492)
shape = SubResource("BoxShape3D_dpjka")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path Right/CollisionShape3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0271282, 0.0212278, -0.00834656)
mesh = SubResource("BoxMesh_25bo8")

[node name="PathManager" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.752068, 0)
curve = SubResource("Curve3D_swcr6")
script = ExtResource("4_c060r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -50.5
offset_right = 90.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("5_wc6oj")

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -3.1694, 12.8394, 67.9449)
script = ExtResource("2_8hfka")

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="VBoxContainer" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="VBoxContainer" method="_on_load_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="VBoxContainer" method="_on_quit_game_button_pressed"]
